	PR c++/23965 	* call.c (resolve_args): Return error_mark_node on arguments 	whose TREE_TYPE is error_mark_node.

* g++.dg/template/error1.C: Reject "no matching function" message.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104489 138bc75d-0d04-0410-961f-82ee72b054a4